--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 01:14:00 PM</p>
+    <p class="lastupdate">09/09/2020 01:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.1&#176;F</td>
+        <td class="data">77.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.1&#176;F</td>
+        <td class="data">77.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.1&#176;F</td>
+        <td class="data">77.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">43%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.846 inHg (-0.007)</td>
+        <td class="data">29.849 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph SW (225&#176;)</td>
+        <td class="data">4 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.5&#176;F</td>
+        <td class="data">77.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:12:54 PM">
-            77.1</span><br/>
+          <span title="01:18:00 PM">
+            77.4</span><br/>
           <span title="07:08:29 AM">
             56.5</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:12:54 PM" class="hival">
-            77.1</span>
+          <span title="01:18:00 PM" class="hival">
+            77.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:23:09 AM">
             85</span><br/>
-          <span title="01:09:56 PM">
-            44</span>
+          <span title="01:15:04 PM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          303
+          285
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 22 hours, 27 minutes</td>
+      <td class="data">7 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 22 hours, 27 minutes</td>
+      <td class="data">7 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
