--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 01:59:00 PM</p>
+    <p class="lastupdate">09/09/2020 02:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.3&#176;F</td>
+        <td class="data">51.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (-0.024)</td>
+        <td class="data">29.836 inHg (-0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SSW (202&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">78.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          212
+          210
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          333
+          332
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:26:01 AM">
-            78.1</span><br/>
+          <span title="01:59:02 PM">
+            78.2</span><br/>
           <span title="08:05:01 AM">
             71.9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 23 hours, 12 minutes</td>
+      <td class="data">7 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 23 hours, 12 minutes</td>
+      <td class="data">7 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
