--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 01:59:00 PM</p>
+    <p class="lastupdate">09/09/2020 02:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -335,11 +335,11 @@
           </td>
           <td class="data new_row">
             0<br/>
-            212
+            210
           </td>
           <td class="data new_row">
             0<br/>
-            333
+            332
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            78.1<br/>
-            <span class="timestamp">12:26:01 AM</span><br/>
+            78.2<br/>
+            <span class="timestamp">01:59:02 PM</span><br/>
             71.9<br/>
             <span class="timestamp">08:05:01 AM</span>
           </td>
