--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 02:24:00 PM</p>
+    <p class="lastupdate">09/09/2020 02:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.2&#176;F</td>
+        <td class="data">78.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.2&#176;F</td>
+        <td class="data">78.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.2&#176;F</td>
+        <td class="data">78.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">38%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.834 inHg (-0.034)</td>
+        <td class="data">29.835 inHg (-0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph SW (225&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">42%</td>
       </tr>
     </tbody>
   </table>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Last quarter<br/>
-            54%</td>
+            53%</td>
         </tr>
       </table>
     </div>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:23:09 AM">
             85</span><br/>
-          <span title="01:36:26 PM">
-            39</span>
+          <span title="02:28:32 PM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          208
+          207
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          325
+          323
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:18:02 PM">
-            78.4</span><br/>
+          <span title="02:27:02 PM">
+            78.5</span><br/>
           <span title="08:05:01 AM">
             71.9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 23 hours, 37 minutes</td>
+      <td class="data">7 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 23 hours, 37 minutes</td>
+      <td class="data">7 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
